Adding new controllers with some clean up

--- a/SimpleFrontEnd/Views/Guitars/Create.cshtml
+++ b/SimpleFrontEnd/Views/Guitars/Create.cshtml
@@ -44,5 +44,5 @@
 </div>
 
 <div>
-    <a href="/Guitars" class="btn btn-secondary">Back to List</a>
+    <a class="btn btn-secondary" asp-area="" asp-controller="Guitars" asp-action="Index">Back to List</a>
 </div>
