--- a/SimpleFrontEnd/Views/Guitars/Details.cshtml
+++ b/SimpleFrontEnd/Views/Guitars/Details.cshtml
@@ -45,5 +45,5 @@
 
 <div>
     <a href="/Guitars/Edit/@Model.Id" class="btn btn-primary">Edit</a> |
-    <a href="/Guitars" class="btn btn-secondary">Back to List</a>
+    <a class="btn btn-secondary" asp-area="" asp-controller="Guitars" asp-action="Index">Back to List</a>
 </div>
