--- a/SimpleFrontEnd/Views/Guitars/Delete.cshtml
+++ b/SimpleFrontEnd/Views/Guitars/Delete.cshtml
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a href="/Guitars" class="btn btn-secondary">Back to List</a>
+        <a class="btn btn-secondary" asp-area="" asp-controller="Guitars" asp-action="Index">Back to List</a>
     </form>
 </div>
